# Cpp-Game-Kit

./: .gitignore  README.md
GameDir/: LaraTest.fbx
GameDir/Data/Development/Shaders/Mesh3D/: Mesh3D.fs  Mesh3D.vs
GameDir/Data/Development/Shaders/Sprite2D/: Sprite2D.fs  Sprite2D.vs
GameDir/Data/Development/Shaders/Sprite2DAtlas/: Sprite2DAtlas.fs  (+1 more)
GameDir/Data/Shaders/D3D/: Mesh3D.fsb  Sprite2D.fsb  Sprite2DAtlas.fsb  Sprite2DAtlasI.fsb  Sprite2DAtlasI.vsb  Sprite2DI.fsb  Sprite2DI.vsb
GameDir/Data/Shaders/SPIRV/: Mesh3D.fsb  Mesh3D.vsb  Sprite2D.fsb  Sprite2D.vsb  Sprite2DAtlas.fsb  Sprite2DAtlasI.fsb  Sprite2DAtlasI.vsb  Sprite2DI.fsb  Sprite2DI.vsb
Project/: ._Thirdparty  CMakeLists.txt  Data.tar  SDLMetalBridge.mm  build.py
Project/Examples/: Draw 3D Model.cpp  Draw Text.cpp  WAD File.cpp
Project/Game/: CMakeLists.txt
Project/Game/Engine/Include/: Engine.hpp
Project/Game/Engine/Source/: Engine.cpp
Project/Game/Include/: Game.hpp  GamePipeline.hpp
Project/Game/Source/: Game.cpp  GamePipeline.cpp  GameWindow.cpp
Project/GameEngine/: CMakeLists.txt
Project/GameEngine/Core/Include/: Alarm.hpp  Clock.hpp  FileSystem.hpp  Globals.hpp  IniFile.hpp  WADMaker.hpp
Project/GameEngine/Core/Source/: Alarm.cpp  BigError.cpp  Clock.cpp  FileSystem.cpp  IniFile.cpp  Program.cpp  WADFile.cpp  WADMaker.cpp
Project/GameEngine/Draw/Include/: DrawSurface3D.hpp  Sprite.hpp  SpriteAnimation.hpp  Viewport3D.hpp
Project/GameEngine/Draw/Source/: DrawSurface.cpp  DrawSurface2D.cpp  DrawSurface3D.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  SpriteAnimation.cpp  Viewport3D.cpp
Project/GameEngine/Include/: API.hpp  Alarm.hpp  BigError.hpp  Collider.hpp  Collision.hpp  DrawData.hpp  DrawMath.hpp  DrawSurface.hpp  DrawSurface2D.hpp  DrawSurface3D.hpp  FileSystem.hpp  Gamepad.hpp  IniFile.hpp  Math.hpp  Matrix4.hpp  Program.hpp  Quaternion.hpp  Renderer.hpp  Shader.hpp  Sound.hpp  SpriteAnimation.hpp  Transformation.hpp  Vector4.hpp  Viewport3D.hpp  WADFile.hpp  WADMaker.hpp  Window.hpp
Project/GameEngine/Math/Include/: Collision.hpp  EulerRotation.hpp  Multiply.hpp
Project/GameEngine/Math/Source/: Collision.cpp  DrawMath.cpp  Transformation.cpp
Project/GameEngine/Net/Include/: NetClient.hpp  NetClientTCP.hpp  NetClientUDP.hpp  NetData.hpp  NetNode.hpp  NetServer.hpp  NetServerTCP.hpp  NetServerUDP.hpp  Network.hpp
Project/GameEngine/Net/Source/: NetClient.cpp  NetClientTCP.cpp  NetClientUDP.cpp  NetNode.cpp  NetServer.cpp  NetServerTCP.cpp  NetServerUDP.cpp  Network.cpp
Project/GameEngine/OS/Include/: Gamepad.hpp  Input.hpp  Sound.hpp
Project/GameEngine/OS/Source/: Gamepad.cpp  Input.cpp  Sound.cpp  Window.cpp
Project/GameEngine/Private/: SDLMetalBridge.mm
Project/GameEngine/Source/: Alarm.cpp  BigError.cpp  Clock.cpp  DrawSurface3D.cpp  FileSystem.cpp  IniFile.cpp  Renderer.cpp  Shader.cpp  Sound.cpp  SpriteAnimation.cpp  Transformation.cpp  WADFile.cpp  WADMaker.cpp  Window.cpp
Project/M3DC/: CMakeLists.txt
Project/M3DC/Source/: Main.cpp
Project/Scripts/: compile assets.py  compile shaders.py
Project/Thirdparty__/: Thirdparty.txt
Project/Thirdparty__/Inc/assimp/: revision.h
Project/Tudo/Core/Source/: FileSystem.cpp
Project/Tudo/Draw/Include/: BillboardRenderer.hpp  DrawData.hpp  DrawPipeline.hpp  GraphicsDevice.hpp  SpriteRenderer.hpp
Project/Tudo/Draw/Source/: BillboardRenderer.cpp  DrawPipeline.cpp  DrawSurface2D.cpp  DrawSurface3D.cpp  GraphicsDevice.cpp
Project/Tudo/OS/Source/: Gamepad.cpp
Project/Tudo/Res/Include/: AssetLoader.hpp
Project/Tudo/Res/Source/: AssetLoader.cpp
RTSGame/: RTSGame.sln  build.py
RTSGame/Game/: Game.vcxproj  Game.vcxproj.filters
RTSGame/Game/Inc/: Game.hpp  GameWindow.hpp
RTSGame/Game/Src/: Game.cpp  GameWindow.cpp  Main.cpp
RTSGame/GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters
RTSGame/GameEngine.Test/: FileSystemTests.cpp  GameEngine.Test.vcxproj  GameEngine.Test.vcxproj.filters  MathTests.cpp
RTSGame/GameEngine/Inc/: API.hpp  Arithmetic.hpp  Clock.hpp  Collider.hpp  Collision.hpp  DebugHelp.hpp  DrawData.hpp  DrawException.hpp  DrawSurface.hpp  FileSystem.hpp  Gamepad.hpp  IniFile.hpp  Input.hpp  InputTypes.hpp  Matrix4.hpp  Program.hpp  Renderer.hpp  ScriptCore.hpp  ScriptException.hpp  ScriptField.hpp  ScriptInstance.hpp  ScriptText.hpp  Shader.hpp  Sound.hpp  Sprite.hpp  SystemTypes.hpp  Transformation.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  WADFile.hpp  WADMaker.hpp  Window.hpp
RTSGame/GameEngine/Include/: API.hpp  Collision.hpp  DrawMath.hpp  DrawSurface.hpp  DrawSurface2D.hpp  DrawSurface3D.hpp  FileSystem.hpp  InputTypes.hpp  Matrix4.hpp  Multiply.hpp  Program.hpp  Quaternion.hpp  Renderer.hpp  Shader.hpp  Transformation.hpp  Vector2.hpp  Viewport3D.hpp  WADFile.hpp  WADMaker.hpp  Window.hpp
RTSGame/GameEngine/Public/: Animation.hpp  Clock.hpp  Collider.hpp  Collision.hpp  DrawData.hpp  DrawSurface.hpp  DrawSurface3D.hpp  EulerRotation.hpp  FileSystem.hpp  Gamepad.hpp  Input.hpp  InputTypes.hpp  Matrix4.hpp  Program.hpp  Renderer.hpp  ScriptCore.hpp  ScriptField.hpp  ScriptInstance.hpp  ScriptText.hpp  Shader.hpp  Sound.hpp  Sprite.hpp  SystemTypes.hpp  Transformation.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  WADFile.hpp  WADMaker.hpp  Window.hpp
RTSGame/GameEngine/Source/: Alarm.cpp  Animation.cpp  BigError.cpp  Clock.cpp  Collision.cpp  DrawMath.cpp  DrawSurface.cpp  DrawSurface2D.cpp  DrawSurface3D.cpp  FileSystem.cpp  Gamepad.cpp  IniFile.cpp  Input.cpp  Program.cpp  Renderer.cpp  ScriptCore.cpp  ScriptInstance.cpp  ScriptText.cpp  Shader.cpp  Sound.cpp  Sprite.cpp  SpriteAnimation.cpp  Transformation.cpp  Viewport3D.cpp  WADFile.cpp  WADMaker.cpp  Window.cpp
RTSGame/GameEngine/Src/: Clock.cpp  Collision.cpp  DrawException.cpp  DrawSurface.cpp  FileSystem.cpp  Gamepad.cpp  IniFile.cpp  Input.cpp  Program.cpp  Renderer.cpp  ScriptCore.cpp  ScriptException.cpp  ScriptInstance.cpp  ScriptText.cpp  Shader.cpp  Sound.cpp  Sprite.cpp  Transformation.cpp  Translation.cpp  WADFile.cpp  WADMaker.cpp  Window.cpp
RTSGame/Lua/: Lua.vcxproj  Lua.vcxproj.filters
(+6 files in other folders)
